[project]
name = "PubMed-parse"
version = "0.1.0"
description = "For parsing PubMed"
authors = [
    {name = "Nikita Savvin", email = "nikita.vsav@gmail.com"},
]
dependencies = [
    "jupyter>=1.0.0",
    "pandas>=2.2.1",
    "tqdm>=4.66.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
